style: centralizar canvas do jogo na tela para melhor visualização

--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
   <title>Farm Game MVP</title>
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: #d6e2c0; /* cor de fundo clara e agradável */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
+    canvas {
+      border: 4px solid #333;
+      image-rendering: pixelated; /* para manter o estilo retrô se usar pixel art */
+    }
+  </style>
 </head>
 <body>
   <script src="storage.js"></script>
